<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Русский календарь</string>
    <string name="splash_title">Планируй свое будущее</string>
    <string name="splash_subtitle">Русский календарь</string>
    <string name="btn_start">Начать</string>
    <string name="upcoming_events">Предстоящие события</string>
    <string name="add_event_title">Добавление события</string>
    <string name="label_time">Время</string>
    <string name="label_event">Событие</string>
    <string name="hint_time">ЧЧ:ММ</string>
    <string name="hint_event">Название события</string>
    <string name="btn_save">Сохранить</string>
    <string name="tips_title">Полезные советы</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="notification_channel_name">Напоминания</string>
    <string name="notification_channel_desc">Уведомления о предстоящих событиях</string>
    <string name="notification_title">Напоминание</string>
    <string name="event_saved">Событие добавлено</string>
    <string name="event_deleted">Событие удалено</string>
    <string name="no_events">Нет событий на этот день</string>
    <string name="invalid_time">Неверный формат времени (ЧЧ:ММ)</string>
    <string name="empty_fields">Заполните все поля</string>
</resources>
